--- a/index.html
+++ b/index.html
@@ -14,113 +14,42 @@
     <!-- font awesome icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
+    <!-- JSON Data -->
+    <script src="data.json"></script>
 
-    <title>Media Center</title>
+    <title>Multimedia Library</title>
 </head>
 
 <body>
     <div class="container">
+        <a id="textDeco" href="index.html">
+            <div id="bgColor" class="jumbotron">
+                <h1><span class="glyphicon glyphicon-console" aria-hidden="true"></span> M&sup3;
+                </h1>
+                <p>music, movies &amp; more</p>
+            </div>
+        </a>
 
-        <div style="background: #00a5f130; !important" class="jumbotron">
-            <h1><span class="glyphicon glyphicon-console" aria-hidden="true"></span> M&sup3;
-            </h1>
-            <p>music, movies &amp; more</p>
-        </div>
-
-        <ul style="background: #00a5f130; !important" class="nav nav-tabs navbar-inverse">
+        <ul id="bgColor" class="nav nav-tabs navbar-inverse">
             <li class="active" role="presentation"><a href="index.html">Home</a></li>
             <li role="presentation"><a href="music.html">Music</a></li>
             <li role="presentation"><a href="movies.html">Movies</a></li>
             <li role="presentation"><a href="other.html">Other</a></li>
         </ul>
 
-
-        <h1>Music</h1>
         <div class="row">
             <div class="col-xs-7 col-md-4 col-lg-3">
-                <a href="#" class="thumbnail">
-                    <img src="img/dalida.jpg" alt="Dalida - Les 50 plus belles chansons">
-                    <p>Dalida - Les 50 plus belles chansons</p>
-                </a>
+                <h1>Music</h1>
+                <div id="category1">
+                </div>
             </div>
             <div class="col-xs-7 col-md-4 col-lg-3">
-                <a href="#" class="thumbnail">
-                    <img src="img/elvis.jpg" alt="Elvis Presley - Love Me Tender">
-                    <p>Elvis Presley - Love Me Tender</p>
-                </a>
+                <h1>Movies</h1>
+                <div id="category2">
+                </div>
             </div>
-            <div class="col-xs-7 col-md-4 col-lg-3">
-                <a href="#" class="thumbnail">
-                    <img src="img/sinatra.jpg" alt="">
-                    <p>Frank Sinatra - My Way</p>
-                </a>
-            </div>
-            <div class="col-xs-7 col-md-4 col-lg-3">
-                <a href="#" class="thumbnail">
-                    <img src="img/ella.jpg" alt="">
-                    <p>Ella Fitzgerald - Summertime</p>
-                </a>
-            </div>
+
         </div>
-
-
-        <h1>Movies</h1>
-        <div class="row">
-            <div class="col-xs-7 col-md-4 col-lg-3">
-                <a href="#" class="thumbnail">
-                    <img src="img/movie1.jpg" alt="">
-                    <p>As Good As It Gets</p>
-                </a>
-            </div>
-            <div class="col-xs-7 col-md-4 col-lg-3">
-                <a href="#" class="thumbnail">
-                    <img src="img/movie2.jpg" alt="">
-                    <p>Breakfast At Tiffany's</p>
-                </a>
-            </div>
-            <div class="col-xs-7 col-md-4 col-lg-3">
-                <a href="#" class="thumbnail">
-                    <img src="img/movie3.jpg" alt="">
-                    <p>The Bodyguard</p>
-                </a>
-            </div>
-            <div class="col-xs-7 col-md-4 col-lg-3">
-                <a href="#" class="thumbnail">
-                    <img src="img/movie4.jpg" alt="">
-                    <p>Forrest Gump</p>
-                </a>
-            </div>
-        </div>
-
-
-        <h1>Instagram</h1>
-        <div class="row">
-            <div class="col-xs-7 col-md-4 col-lg-3">
-                <a href="#" class="thumbnail">
-                    <img src="img/olioptic.jpg" alt="">
-                    <a href="https://www.instagram.com/olioptic/" target="_blank">olioptic</a>
-                </a>
-            </div>
-            <div class="col-xs-7 col-md-4 col-lg-3">
-                <a href="#" class="thumbnail">
-                    <img src="img/fabolus_vienna.jpg" alt="">
-                    <a href="https://www.instagram.com/fabolus_vienna/" target="_blank">fabolus_vienna</a>
-                </a>
-            </div>
-            <div class="col-xs-7 col-md-4 col-lg-3">
-                <a href="#" class="thumbnail">
-                    <img src="img/misshattan.jpg" alt="">
-                    <a href="https://www.instagram.com/misshattan/" target="_blank">misshattan</a>
-                </a>
-            </div>
-            <div class="col-xs-7 col-md-4 col-lg-3">
-                <a href="#" class="thumbnail">
-                    <img src="img/perfex_vie.jpg" alt="">
-                    <a href="https://www.instagram.com/perfex_vie/" target="_blank">perfex_vie</a>
-                </a>
-            </div>
-        </div>
-
 
         <nav aria-label="Page navigation">
             <ul class="pagination">
@@ -143,8 +72,8 @@
 
 
         <footer>
-            <div style="background: #00a3ef30; !important" class="panel-footer" id="footer-center">
-                <p>&copy; S. Westenberger</p>
+            <div style="background: #001E2D !important" class="panel-footer" id="footer-center">
+                <p style="color: rgb(199, 199, 199)">&copy; S. Westenberger</p>
 
                 <div style="word-spacing: 1.5em;">
                     <a href="https://github.com/schahnaz" target="_blank"><i class="fab fa-github"></i></a>
@@ -157,6 +86,8 @@
 
 
     </div>
+
+    <script src="script/main.js"></script>
 </body>
 
 <link rel="stylesheet" href="css/style.css">
