add modal, add item feature

--- a/books.html
+++ b/books.html
@@ -29,54 +29,57 @@
         </a>
 
         <ul id="bgColor" class="nav nav-tabs navbar-inverse">
-            <li class="active" role="presentation"><a href="index.html">Home</a></li>
+            <li role="presentation"><a href="index.html">Home</a></li>
             <li role="presentation"><a href="music.html">Music</a></li>
             <li role="presentation"><a href="movies.html">Movies</a></li>
-            <li role="presentation"><a href="other.html">Other</a></li>
+            <li class="active" role="presentation"><a href="books.html">Books</a></li>
+            <li role="presentation"><a href="photography.html">Photography</a></li>
         </ul>
 
 
-        <h1>Instagram</h1>
+        <h1>Books</h1>
         <div class="row">
             <div class="col-xs-7 col-md-4 col-lg-3">
                 <a href="#" class="thumbnail">
-                    <img src="img/olioptic.jpg" alt="">
-                    <a href="https://www.instagram.com/olioptic/" target="_blank">olioptic</a>
+                    <img src="img/book1.jpg" alt="">
+                    <p>A Brief History of Time</p>
                 </a>
             </div>
             <div class="col-xs-7 col-md-4 col-lg-3">
                 <a href="#" class="thumbnail">
-                    <img src="img/fabolus_vienna.jpg" alt="">
-                    <a href="https://www.instagram.com/fabolus_vienna/" target="_blank">fabolus_vienna</a>
+                    <img src="img/book2.jpg" alt="">
+                    <p>The Diary of a Young Girl</p>
                 </a>
             </div>
             <div class="col-xs-7 col-md-4 col-lg-3">
                 <a href="#" class="thumbnail">
-                    <img src="img/misshattan.jpg" alt="">
-                    <a href="https://www.instagram.com/misshattan/" target="_blank">misshattan</a>
+                    <img src="img/book3.jpg" alt="">
+                    <p>To Kill a Mockingbird</p>
                 </a>
             </div>
             <div class="col-xs-7 col-md-4 col-lg-3">
                 <a href="#" class="thumbnail">
-                    <img src="img/perfex_vie.jpg" alt="">
-                    <a href="https://www.instagram.com/perfex_vie/" target="_blank">perfex_vie</a>
+                    <img src="img/book4.jpg" alt="">
+                    <p>Mother to Mother</p>
                 </a>
             </div>
         </div>
 
+
         <nav aria-label="Page navigation">
             <ul class="pagination">
                 <li>
-                    <a href="index.html" aria-label="Previous">
+                    <a href="movies.html" aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                     </a>
                 </li>
                 <li><a href="index.html">1</a></li>
                 <li><a href="music.html">2</a></li>
                 <li><a href="movies.html">3</a></li>
-                <li><a href="other.html">4</a></li>
+                <li><a href="books.html">4</a></li>
+                <li><a href="photgraphy.html">5</a></li>
                 <li>
-                    <a href="music.html" aria-label="Next">
+                    <a href="photography.html" aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
                     </a>
                 </li>
