--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <li class="active" role="presentation"><a href="index.html">Home</a></li>
             <li role="presentation"><a href="music.html">Music</a></li>
             <li role="presentation"><a href="movies.html">Movies</a></li>
-            <li role="presentation"><a href="other.html">Other</a></li>
+            <li role="presentation"><a href="books.html">Books</a></li>
+            <li role="presentation"><a href="photography.html">Photography</a></li>
         </ul>
 
         <div class="row">
@@ -48,20 +49,47 @@
                 <div id="category2">
                 </div>
             </div>
+            <div class="col-xs-7 col-md-4 col-lg-3">
+                <h1>Books</h1>
+                <div id="category3">
+                </div>
+            </div>
+            <div class="col-xs-7 col-md-4 col-lg-3">
+                <h1>Photographers</h1>
+                <div id="category4">
+                </div>
+            </div>
 
+        </div>
+
+        <div class="well">
+            <h1>Something is missing?</h1>
+
+            <h2>Add new items</h2>
+            <div id="wrapper">
+                <div class="inputFields">
+                    <input type="text" id="item1" name="listAlbum" placeholder="Album / Book name / Movie name" /><br>
+                    <input type="text" id="item2" name="listInterpret" placeholder="Interpret or Author" /><br>
+                    <textarea name="listDescription" id="item3" cols="30" rows="10" placeholder="Enter description"></textarea><br>
+                    <input class="btn btn-default btn-sm" type="submit" value="Add">
+                </div>
+                <ul>
+                </ul>
+            </div>
         </div>
 
         <nav aria-label="Page navigation">
             <ul class="pagination">
                 <li>
-                    <a href="index.html" aria-label="Previous">
+                    <a href="photography.html" aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                     </a>
                 </li>
                 <li><a href="index.html">1</a></li>
                 <li><a href="music.html">2</a></li>
                 <li><a href="movies.html">3</a></li>
-                <li><a href="other.html">4</a></li>
+                <li><a href="books.html">4</a></li>
+                <li><a href="photography.html">5</a></li>
                 <li>
                     <a href="music.html" aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
