--- a/movies.html
+++ b/movies.html
@@ -29,10 +29,11 @@
         </a>
 
         <ul id="bgColor" class="nav nav-tabs navbar-inverse">
-            <li class="active" role="presentation"><a href="index.html">Home</a></li>
+            <li role="presentation"><a href="index.html">Home</a></li>
             <li role="presentation"><a href="music.html">Music</a></li>
-            <li role="presentation"><a href="movies.html">Movies</a></li>
-            <li role="presentation"><a href="other.html">Other</a></li>
+            <li class="active" role="presentation"><a href="movies.html">Movies</a></li>
+            <li role="presentation"><a href="books.html">Books</a></li>
+            <li role="presentation"><a href="photography.html">Photography</a></li>
         </ul>
 
 
@@ -68,16 +69,17 @@
         <nav aria-label="Page navigation">
             <ul class="pagination">
                 <li>
-                    <a href="index.html" aria-label="Previous">
+                    <a href="music.html" aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                     </a>
                 </li>
                 <li><a href="index.html">1</a></li>
                 <li><a href="music.html">2</a></li>
                 <li><a href="movies.html">3</a></li>
-                <li><a href="other.html">4</a></li>
+                <li><a href="books.html">4</a></li>
+                <li><a href="photography.html">5</a></li>
                 <li>
-                    <a href="music.html" aria-label="Next">
+                    <a href="books.html" aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
                     </a>
                 </li>
