--- a/photography.html
+++ b/photography.html
@@ -30,61 +30,37 @@
 
         <ul id="bgColor" class="nav nav-tabs navbar-inverse">
             <li role="presentation"><a href="index.html">Home</a></li>
-            <li class="active" role="presentation"><a href="music.html">Music</a></li>
+            <li role="presentation"><a href="music.html">Music</a></li>
             <li role="presentation"><a href="movies.html">Movies</a></li>
             <li role="presentation"><a href="books.html">Books</a></li>
-            <li role="presentation"><a href="photography.html">Photography</a></li>
+            <li class="active" role="presentation"><a href="photography.html">Photography</a></li>
         </ul>
 
-        <!-- Modal Dalida -->
-        <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">About Dalida</h4>
-                    </div>
-                    <div class="modal-body">
-                        <p>Iolanda Cristina Gigliotti[1] (Italian: [joˈlanda kriˈstiːna dʒiʎˈʎɔtti]; 17 January 1933 – 3 May 1987), better known as Dalida (Egyptian Arabic: داليدا‎), was a French-Italian-Egyptian singer and actress who spent most of her
-                            career in France. She won the Miss Egypt beauty contest in 1954.[2] She performed and recorded in 11 languages (French, Italian, German, Spanish, English, Egyptian and Levantine Arabic, Japanese, Hebrew, Dutch and Greek). In
-                            Europe she popularized musical genres like the twist (as dance), pop, disco, reggae, and, globally the raï. Her career began in 1956 and ended with her last album in 1986, half a year before she committed suicide. She performed
-                            at concerts until her last days. Her death led to an iconic image as a tragic diva and renowned singer. According to Universal Music, she has sold 140 million albums and singles worldwide.
-                            <br><br><small>Source: <a href="https://en.wikipedia.org/wiki/Dalida">Wikipedia</a></small></p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-
-        <h1>Music</h1>
+        <h1>Instagram</h1>
         <div class="row">
             <div class="col-xs-7 col-md-4 col-lg-3">
                 <a href="#" class="thumbnail">
-                    <img src="img/dalida.jpg" alt="Dalida - Les 50 plus belles chansons">
-                    <p>Dalida - Les 50 plus belles chansons</p>
-                    <!-- modal -->
-                    <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#myModal1">Description</button>
+                    <img src="img/olioptic.jpg" alt="">
+                    <a href="https://www.instagram.com/olioptic/" target="_blank">olioptic</a>
                 </a>
             </div>
             <div class="col-xs-7 col-md-4 col-lg-3">
                 <a href="#" class="thumbnail">
-                    <img src="img/elvis.jpg" alt="Elvis Presley - Love Me Tender">
-                    <p>Elvis Presley - Love Me Tender</p>
+                    <img src="img/fabolus_vienna.jpg" alt="">
+                    <a href="https://www.instagram.com/fabolus_vienna/" target="_blank">fabolus_vienna</a>
                 </a>
             </div>
             <div class="col-xs-7 col-md-4 col-lg-3">
                 <a href="#" class="thumbnail">
-                    <img src="img/sinatra.jpg" alt="">
-                    <p>Frank Sinatra - My Way</p>
+                    <img src="img/misshattan.jpg" alt="">
+                    <a href="https://www.instagram.com/misshattan/" target="_blank">misshattan</a>
                 </a>
             </div>
             <div class="col-xs-7 col-md-4 col-lg-3">
                 <a href="#" class="thumbnail">
-                    <img src="img/ella.jpg" alt="">
-                    <p>Ella Fitzgerald - Summertime</p>
+                    <img src="img/perfex_vie.jpg" alt="">
+                    <a href="https://www.instagram.com/perfex_vie/" target="_blank">perfex_vie</a>
                 </a>
             </div>
         </div>
@@ -92,7 +68,7 @@
         <nav aria-label="Page navigation">
             <ul class="pagination">
                 <li>
-                    <a href="index.html" aria-label="Previous">
+                    <a href="books.html" aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                     </a>
                 </li>
@@ -102,7 +78,7 @@
                 <li><a href="books.html">4</a></li>
                 <li><a href="photography.html">5</a></li>
                 <li>
-                    <a href="movies.html" aria-label="Next">
+                    <a href="index.html" aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
                     </a>
                 </li>
