--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!-- Create a responsive Bootstrap layout based on the grid system. Deploy the standard Bootstrap classes for styling a form. Feel free to deploy other Bootstrap Components to get well organized and structured layout which will facilitate the visibility of each property of your Media. Your solution needs to cover responsiveness (at least laptops and mobile devices)  -->
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -38,6 +40,8 @@
             <li role="presentation"><a href="photography.html">Photography</a></li>
         </ul>
 
+        <!-- create a visually appealing rendering of all the Media objects saved in your data structure. Use following images as a hint (not as a final design solution!!!) on how to organize your page, then improve -->
+
         <div class="row">
             <div class="col-xs-7 col-md-4 col-lg-3">
                 <h1>Music</h1>
@@ -64,26 +68,28 @@
 
         <div class="well">
             <h1>Something is missing?</h1>
-
             <h2>Add new items</h2>
-            <div id="wrapper">
-                <div class="inputFields">
-                    <input type="text" id="item1" name="listAlbum" placeholder="Album / Book name / Movie name" /><br>
-                    <input type="text" id="item2" name="listInterpret" placeholder="Interpret or Author" /><br>
-                    <textarea name="listDescription" id="item3" cols="30" rows="10" placeholder="Enter description"></textarea><br>
-                    <input class="btn btn-default btn-sm" type="submit" value="Add">
+            <div class="inputFields"><br>
+                <input type="text" id="item1" name="listAlbum" placeholder="Album / Book name / Movie name" /><br>
+                <input type="text" id="item2" name="listInterpret" placeholder="Interpret or Author" /><br>
+                <textarea name="listDescription" id="item3" cols="30" rows="5" placeholder="Enter description"></textarea><br>
+                <div class="form-group">
+                    <label for="fileInput">Choose picture</label>
+                    <input type="file" class="form-control-file btn btn-info" id="fileInput">
                 </div>
-                <ul>
-                </ul>
+                <input class="button btn btn-default" type="submit" value="add">
             </div>
+            <ul>
+            </ul>
         </div>
+
+
 
         <nav aria-label="Page navigation">
             <ul class="pagination">
                 <li>
                     <a href="photography.html" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
+                        <span aria-hidden="true">&laquo;</span></a>
                 </li>
                 <li><a href="index.html">1</a></li>
                 <li><a href="music.html">2</a></li>
@@ -117,7 +123,6 @@
 
     <script src="script/main.js"></script>
 </body>
-
 <link rel="stylesheet" href="css/style.css">
 
 </html>
