--- a/music.html
+++ b/music.html
@@ -36,20 +36,22 @@
             <li role="presentation"><a href="photography.html">Photography</a></li>
         </ul>
 
+        <!-- When you click on one of the media items, more information  regarding single media should be displayed in a modal window (including Description field). -->
+
         <!-- Modal Dalida -->
-        <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">About Dalida</h4>
+                        <h4 class="modal-title" id="myModalLabel1">About Dalida</h4>
                     </div>
                     <div class="modal-body">
                         <p>Iolanda Cristina Gigliotti[1] (Italian: [joˈlanda kriˈstiːna dʒiʎˈʎɔtti]; 17 January 1933 – 3 May 1987), better known as Dalida (Egyptian Arabic: داليدا‎), was a French-Italian-Egyptian singer and actress who spent most of her
                             career in France. She won the Miss Egypt beauty contest in 1954.[2] She performed and recorded in 11 languages (French, Italian, German, Spanish, English, Egyptian and Levantine Arabic, Japanese, Hebrew, Dutch and Greek). In
                             Europe she popularized musical genres like the twist (as dance), pop, disco, reggae, and, globally the raï. Her career began in 1956 and ended with her last album in 1986, half a year before she committed suicide. She performed
                             at concerts until her last days. Her death led to an iconic image as a tragic diva and renowned singer. According to Universal Music, she has sold 140 million albums and singles worldwide.
-                            <br><br><small>Source: <a href="https://en.wikipedia.org/wiki/Dalida">Wikipedia</a></small></p>
+                            <br><br><small>Source: <a target="_blank" href="https://en.wikipedia.org/wiki/Dalida">Wikipedia</a></small></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -57,6 +59,92 @@
                 </div>
             </div>
         </div>
+
+
+        <!-- Modal Elvis -->
+        <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel2">About Elvis Presley</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>Elvis Aaron Presley[a] (January 8, 1935 – August 16, 1977) was an American singer and actor. Regarded as one of the most significant cultural icons of the 20th century, he is often referred to as the "King of Rock and Roll" or
+                            simply "the King". Presley was born in Tupelo, Mississippi, and relocated to Memphis, Tennessee, with his family when he was 13 years old. His music career began there in 1954, recording at Sun Records with producer Sam Phillips,
+                            who wanted to bring the sound of African American music to a wider audience. Accompanied by guitarist Scotty Moore and bassist Bill Black, Presley was a pioneer of rockabilly, an uptempo, backbeat-driven fusion of country music
+                            and rhythm and blues. In 1955, drummer D. J. Fontana joined to complete the lineup of Presley's classic quartet and RCA Victor acquired his contract in a deal arranged by Colonel Tom Parker, who would manage the singer for
+                            more than two decades. Presley's first RCA single, "Heartbreak Hotel", was released in January 1956 and became a number one hit in the United States. With a series of successful network television appearances and chart-topping
+                            records, he became the leading figure of the newly popular sound of rock and roll. His energized interpretations of songs and sexually provocative performance style, combined with a singularly potent mix of influences across
+                            color lines during a transformative era in race relations, made him enormously popular—and controversial.
+                            <br><br><small>Source: <a target="_blank" href="https://en.wikipedia.org/wiki/Elvis_Presley">Wikipedia</a></small></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Modal Sinatra -->
+        <div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel3">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel3">About Frank Sinatra</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>Francis Albert Sinatra (/sɪˈnɑːtrə/; December 12, 1915 – May 14, 1998) was an American singer, actor, and producer who was one of the most popular and influential musical artists of the 20th century. He is one of the best-selling
+                            music artists of all time, having sold more than 150 million records worldwide.[2] Born in Hoboken, New Jersey, to Italian immigrants, Sinatra began his musical career in the swing era with bandleaders Harry James and Tommy
+                            Dorsey. Sinatra found success as a solo artist after he signed with Columbia Records in 1943, becoming the idol of the "bobby soxers". He released his debut album, The Voice of Frank Sinatra, in 1946. Sinatra's professional
+                            career had stalled by the early 1950s, and he turned to Las Vegas, where he became one of its best known residency performers as part of the Rat Pack. His career was reborn in 1953 with the success of From Here to Eternity,
+                            with his performance subsequently winning an Academy Award and Golden Globe Award for Best Supporting Actor. Sinatra released several critically lauded albums, including In the Wee Small Hours (1955), Songs for Swingin' Lovers!
+                            (1956), Come Fly with Me (1958), Only the Lonely (1958) and Nice 'n' Easy (1960). Sinatra left Capitol in 1960 to start his own record label, Reprise Records, and released a string of successful albums. In 1965, he recorded
+                            the retrospective September of My Years and starred in the Emmy-winning television special Frank Sinatra: A Man and His Music. After releasing Sinatra at the Sands, recorded at the Sands Hotel and Casino in Vegas with frequent
+                            collaborator Count Basie in early 1966, the following year he recorded one of his most famous collaborations with Tom Jobim, the album Francis Albert Sinatra & Antonio Carlos Jobim. It was followed by 1968's Francis A. & Edward
+                            K. with Duke Ellington. Sinatra retired for the first time in 1971, but came out of retirement two years later and recorded several albums and resumed performing at Caesars Palace, and reached success in 1980 with "New York,
+                            New York". Using his Las Vegas shows as a home base, he toured both within the United States and internationally until shortly before his death in 1998.
+                            <br><br><small>Source: <a target="_blank" href="https://en.wikipedia.org/wiki/Frank_Sinatra">Wikipedia</a></small></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Modal Ella Fitzgerald -->
+        <div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel4">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel4">About Ella Fitzgerald</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>Ella Jane Fitzgerald (April 25, 1917 – June 15, 1996) was an American jazz singer sometimes referred to as the First Lady of Song, Queen of Jazz, and Lady Ella. She was noted for her purity of tone, impeccable diction, phrasing,
+                            intonation, and a "horn-like" improvisational ability, particularly in her scat singing. After tumultuous teenage years, Fitzgerald found stability in musical success with the Chick Webb Orchestra, performing across the country
+                            but most often associated with the Savoy Ballroom in Harlem. Fitzgerald's rendition of the nursery rhyme "A-Tisket, A-Tasket" helped boost both her and Webb to national fame. After taking over the band when Webb died, Fitzgerald
+                            left it behind in 1942 to start a solo career that would last the rest of her life. Her manager was Moe Gale, co-founder of the Savoy[1], until she turned the rest of her career over to Norman Granz, who founded Verve Records
+                            to produce new records by Fitzgerald. With Verve she recorded some of her more widely noted works, particularly her interpretations of the Great American Songbook. While Fitzgerald appeared in movies and as a guest on popular
+                            television shows in the second half of the twentieth century, her musical collaborations with Louis Armstrong, Duke Ellington, and The Ink Spots were some of her most notable acts outside of her solo career. These partnerships
+                            produced recognizable songs like "Dream a Little Dream of Me", "Cheek to Cheek", "Into Each Life Some Rain Must Fall", and "It Don't Mean a Thing (If It Ain't Got That Swing)". In 1993, she ended her fifty-nine year career
+                            with her last public performance. Three years later she died at the age of 79 after years of declining health. Her accolades included fourteen Grammy Awards, the National Medal of Arts, and the Presidential Medal of Freedom.
+
+
+                            <br><br><small>Source: <a target="_blank" href="https://en.wikipedia.org/wiki/Ella_Fitzgerald">Wikipedia</a></small></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
 
 
         <h1>Music</h1>
@@ -73,18 +161,25 @@
                 <a href="#" class="thumbnail">
                     <img src="img/elvis.jpg" alt="Elvis Presley - Love Me Tender">
                     <p>Elvis Presley - Love Me Tender</p>
+                    <!-- modal -->
+                    <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#myModal2">Description</button>
                 </a>
             </div>
             <div class="col-xs-7 col-md-4 col-lg-3">
                 <a href="#" class="thumbnail">
                     <img src="img/sinatra.jpg" alt="">
                     <p>Frank Sinatra - My Way</p>
+                    <!-- modal -->
+                    <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#myModal3">Description</button>
                 </a>
             </div>
             <div class="col-xs-7 col-md-4 col-lg-3">
                 <a href="#" class="thumbnail">
                     <img src="img/ella.jpg" alt="">
                     <p>Ella Fitzgerald - Summertime</p>
+                    <!-- modal -->
+                    <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#myModal4">Description</button>
+
                 </a>
             </div>
         </div>
