--- a/books.html
+++ b/books.html
@@ -36,6 +36,122 @@
             <li role="presentation"><a href="photography.html">Photography</a></li>
         </ul>
 
+        <!-- Modal Hawkings -->
+        <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel1">About "A Brief History of Time"</h4>
+                    </div>
+                    <div class="modal-body">
+                        <h4>Contents</h4>
+                        In A Brief History of Time, Stephen Hawking attempts to explain a range of subjects in cosmology, including the Big Bang, black holes and light cones, to the nonspecialist reader. His main goal is to give an overview of the subject, but he also attempts
+                        to explain some complex mathematics. In the 1996 edition of the book and subsequent editions, Hawking discusses the possibility of time travel and wormholes and explores the possibility of having a universe without a quantum singularity
+                        at the beginning of time. A picture of Ptolemy's earth-centric model about the location of the planets, stars, and sun. In the first chapter, Hawking discusses the history of astronomical studies, including the ideas of Aristotle
+                        and Ptolemy. Aristotle, unlike many other people of his time, thought that the Earth was round. He came to this conclusion by observing lunar eclipses, which he thought were caused by the earth's round shadow, and also by observing
+                        an increase in altitude of the North Star from the perspective of observers situated further to the north. Aristotle also thought that the sun and stars went around the Earth in perfect circles, because of "mystical reasons". Second-century
+                        Greek astronomer Ptolemy also pondered the positions of the sun and stars in the universe and made a planetary model that described Aristotle's thinking in more detail.
+
+                        <br><br><small>Source: <a target="_blank" href="https://en.wikipedia.org/wiki/A_Brief_History_of_Time">Wikipedia</a></small></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Modal Anne Frank -->
+        <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel2">About "The Diary of a Young Girl"</h4>
+                    </div>
+                    <div class="modal-body">
+                        <h4>Background</h4>
+                        <p>During the Nazi occupation of the Netherlands, Anne Frank received a blank diary as one of her presents on June 12, 1942, her 13th birthday.[8][9] According to the Anne Frank House, the red, checkered autograph book which Anne
+                            used as her diary was actually not a surprise, since she had chosen it the day before with her father when browsing a bookstore near her home.[9] She began to write in it on June 14, 1942, two days later.[10][11] On July 5,
+                            1942, Anne's older sister Margot received an official summons to report to a Nazi work camp in Germany, and on July 6, Margot and Anne went into hiding with their father Otto and mother Edith. They were joined by Hermann van
+                            Pels, Otto's business partner, including his wife Auguste and their teenage son Peter.[12] Their hiding place was in the sealed-off upper rooms of the annex at the back of Otto's company building in Amsterdam.[12][13] Otto
+                            Frank started his business, named Opekta, in 1933. He was licensed to manufacture and sell pectin, a substance used to make jam. He stopped running his business while everybody was in hiding. But once he returned, he found
+                            his employees running it. The rooms that everyone hid in were concealed behind a movable bookcase in the same building as Opekta. Mrs. van Pels's dentist, Fritz Pfeffer, joined them four months later. In the published version,
+                            names were changed: The van Pelses are known as the Van Daans, and Fritz Pfeffer as Albert Dussel. With the assistance of a group of Otto Frank's trusted colleagues, they remained hidden for two years and one month. In August
+                            1944, they were discovered and deported to Nazi concentration camps. They were long thought to have been betrayed, although there are indications that their discovery may have been accidental, that the police raid had actually
+                            targeted "ration fraud".[14] Of the eight people, only Otto Frank, the oldest, survived the war. Anne died when she was 15 years old in Bergen-Belsen, from typhus. The exact date of her death is unknown, and has long been believed
+                            to be in early March, a few weeks before the prisoners were liberated by British troops in April 1945. However, new research in 2015 indicated that Anne may have died in February.[15] In manuscript, her original diaries are
+                            written over three extant volumes. The first volume (the red-and-white checkered autograph book) covers the period between June 14 and December 5, 1942. Since the second surviving volume (a school exercise book) begins on December
+                            22, 1943, and ends on April 17, 1944, it is assumed that the original volume or volumes between December 1942 and December 1943 were lost - presumably after the arrest, when the hiding place was emptied on Nazi instructions.
+                            However, this missing period is covered in the version Anne rewrote for preservation. The third existing volume (which was also a school exercise book) contains entries from April 17 to August 1, 1944, when Anne wrote for the
+                            last time before her arrest.[16]:2 The manuscript, written on loose sheets of paper, was found strewn on the floor of the hiding place by Miep Gies and Bep Voskuijl after the family's arrest,[17] but before their rooms were
+                            ransacked by the Dutch police and the Gestapo. They were kept safe, and given to Otto Frank after the war, with the original notes, when Anne's death was confirmed in the autumn of 1945.[citation needed]
+
+
+                            <br><br><small>Source: <a target="_blank" href="https://en.wikipedia.org/wiki/The_Diary_of_a_Young_Girl">Wikipedia</a></small></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Modal Mockingbird -->
+        <div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel3">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel3">About "To Kill a Mockingbird"</h4>
+                    </div>
+                    <div class="modal-body">
+                        <h4>Plot</h4>
+                        <p>The story takes place during three years (1933–35) of the Great Depression in the fictional "tired old town" of Maycomb, Alabama, the seat of Maycomb County. It focuses on six-year-old Jean Louise Finch (nicknamed Scout), who lives
+                            with her older brother, Jeremy (nicknamed Jem), and their widowed father, Atticus, a middle-aged lawyer. Jem and Scout befriend a boy named Dill, who visits Maycomb to stay with his aunt each summer. The three children are
+                            terrified yet fascinated by their neighbor, the reclusive Arthur "Boo" Radley. The adults of Maycomb are hesitant to talk about Boo, and few of them have seen him for many years. The children feed one another's imagination
+                            with rumors about his appearance and reasons for remaining hidden, and they fantasize about how to get him out of his house. After two summers of friendship with Dill, Scout and Jem find that someone leaves them small gifts
+                            in a tree outside the Radley place. Several times the mysterious Boo makes gestures of affection to the children, but, to their disappointment, he never appears in person. Judge Taylor appoints Atticus to defend Tom Robinson,
+                            a black man who has been accused of raping a young white woman, Mayella Ewell. Although many of Maycomb's citizens disapprove, Atticus agrees to defend Tom to the best of his ability. Other children taunt Jem and Scout for
+                            Atticus's actions, calling him a "nigger-lover". Scout is tempted to stand up for her father's honor by fighting, even though he has told her not to. Atticus faces a group of men intent on lynching Tom. This danger is averted
+                            when Scout, Jem, and Dill shame the mob into dispersing by forcing them to view the situation from Atticus' and Tom's perspective.
+                            <br><br><small>Source: <a target="_blank" href="https://en.wikipedia.org/wiki/To_Kill_a_Mockingbird">Wikipedia</a></small></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Modal Mother to Mother -->
+        <div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel4">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel4">About "Mother to Mother"</h4>
+                    </div>
+                    <div class="modal-body">
+                        <h4>Description</h4>
+                        <p>Sindiwe Magona’s novel Mother to Mother explores the South African legacy of apartheid through the lens of a woman who remembers a life marked by oppression and injustice. Magona decided to write this novel when she discovered
+                            that Fulbright Scholar Amy Biehl, who had been killed while working to organize the nation’s first ever democratic elections in 1993, died just a few yards away from her own permanent residence in Guguletu, Capetown. She then
+                            learned that one of the boys held responsible for the killing was in fact her neighbor’s son. Magona began to imagine how easily it might have been her own son caught up in the wave of violence that day. The book is based on
+                            this real-life incident, and takes the form of an epistle to Amy Biehl’s mother. The murderer’s mother, Mandisi, writes about her life, the life of her child, and the colonized society that not only allowed, but perpetuated
+                            violence against women and impoverished black South Africans under the reign of apartheid. The result is not an apology for the murder, but a beautifully written exploration of the society that bred such violence.
+
+                            <br><br><small>Source: <a target="_blank" href="http://www.beacon.org/Mother-to-Mother-P151.aspx">Beacon.org</a></small></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
         <h1>Books</h1>
         <div class="row">
@@ -43,24 +159,32 @@
                 <a href="#" class="thumbnail">
                     <img src="img/book1.jpg" alt="">
                     <p>A Brief History of Time</p>
+                    <!-- modal -->
+                    <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#myModal1">Description</button>
                 </a>
             </div>
             <div class="col-xs-7 col-md-4 col-lg-3">
                 <a href="#" class="thumbnail">
                     <img src="img/book2.jpg" alt="">
                     <p>The Diary of a Young Girl</p>
+                    <!-- modal -->
+                    <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#myModal2">Description</button>
                 </a>
             </div>
             <div class="col-xs-7 col-md-4 col-lg-3">
                 <a href="#" class="thumbnail">
                     <img src="img/book3.jpg" alt="">
                     <p>To Kill a Mockingbird</p>
+                    <!-- modal -->
+                    <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#myModal3">Description</button>
                 </a>
             </div>
             <div class="col-xs-7 col-md-4 col-lg-3">
                 <a href="#" class="thumbnail">
                     <img src="img/book4.jpg" alt="">
                     <p>Mother to Mother</p>
+                    <!-- modal -->
+                    <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#myModal4">Description</button>
                 </a>
             </div>
         </div>
