--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
                     <input type="file" class="form-control-file btn btn-info" id="fileInput">
                 </div>
                 <input class="button btn btn-default" type="submit" value="add">
+                <ul class="outputX">
+                </ul>
             </div>
-            <ul>
-            </ul>
+
         </div>
 
 
